--- a/trunk/home.html
+++ b/trunk/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 <link href="css/main.css" rel="stylesheet" type="text/css" media="screen" />
 <title>首页</title>
@@ -23,8 +24,7 @@
 </div-->
   <!--有可能放新闻-->
   <div id="content">
-  内容
-  </div>
+  内容  </div>
   <div id="sidebar">
     <div id="usrinfo">
       <h3>用户登录</h3>
@@ -40,7 +40,7 @@
           </tr>
           <tr>
             <td><input type="submit" value="登录" name="enter" /></td>
-            <td style="color:#FFFFFF"><a href="#">忘记密码？</a></td>
+            <td><a href="#">忘记密码？</a></td>
           </tr>
           <tr>
             <td colspan="2"><a href="register.html">注册新用户</a></td>
